--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -13,13 +13,16 @@ jobs:
           python-version: '3.9'
       - name: Installed package list
         run: apt list --installed
+      - name: Update Linux
+        run: sudo apt-get update
       - name: Remove Chrome
         run: sudo apt purge google-chrome-stable
+      
       # Chromium is already installed!
       # - name: Install software
       #   run: sudo apt install -y chromium-browser
       - name: Install all necessary packages
         run: pip install requests beautifulsoup4 pandas webdriver-manager selenium
-      - name: Run the scraping script
+      - name: Run the scraping scriptp
         run: python scraper.py
 
