--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -18,11 +18,10 @@ jobs:
       - name: Remove Chrome
         run: sudo apt purge google-chrome-stable
       
-      # Chromium is already installed!
-      # - name: Install software
-      #   run: sudo apt install -y chromium-browser
+      - name: Install software
+        run: sudo apt install -y chromium-browser
       - name: Install all necessary packages
         run: pip install requests beautifulsoup4 pandas webdriver-manager selenium
-      - name: Run the scraping scriptp
+      - name: Run the scraping script
         run: python scraper.py
 
